feat: 慣性スクロールエンジンの抽象化