@@ -27,6 +27,33 @@ javafx {
  */
 dependencies {
     implementation(kotlin("stdlib"))
+    testImplementation("org.testfx:testfx-core:4.0.17")
+    testImplementation("org.testfx:testfx-junit5:4.0.17")
+}
+
+/**
+ * task: Test
+ */
+tasks.withType<Test> {
+    doFirst {
+        println("Test JVM Args: ${allJvmArgs}")
+    }
+    jvmArgs(
+        "--add-exports", "javafx.graphics/com.sun.javafx.application=ALL-UNNAMED",
+        "--add-exports", "javafx.graphics/com.sun.glass.ui=ALL-UNNAMED",
+        "--add-exports", "javafx.graphics/com.sun.glass.ui.monocle=ALL-UNNAMED",
+        "--add-opens", "javafx.graphics/com.sun.javafx.application=ALL-UNNAMED",
+        "--add-opens", "javafx.graphics/com.sun.glass.ui=ALL-UNNAMED",
+        "--add-opens", "javafx.graphics/com.sun.glass.ui.monocle=ALL-UNNAMED",
+        "--add-opens", "javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+        "--add-opens", "javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+        "--add-opens", "javafx.base/com.sun.javafx.event=ALL-UNNAMED",
+        "-Dtestfx.robot=glass",
+        "-Dtestfx.headless=true",
+        "-Dglass.platform=Monocle",
+        "-Dmonocle.platform=Headless",
+        "-Dprism.order=sw"
+    )
 }
 
 /**
